--- a/index.html
+++ b/index.html
@@ -225,8 +225,9 @@
         </div>
 
         <textarea type='text' class="form-control" rows="10" placeholder="MESSAGE" name="message" required></textarea>
-        <div class="form-group">
+        <div class="captcha-group">
           <div class="col-sm-12">
+            <button>hi</button>
             <div data-netlify-recaptcha="true">
             </div>
           </div>
