Fix contact form

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     <div class="contact-wrapper">
 
-      <form id="contact-form" class="form-horizontal" role="form" data-aos="fade-up" method="POST" data-netlify="true">
+      <form id="contact-form" class="form-horizontal" role="form" data-aos="fade-up" method="POST" data-netlify="true" autocomplete="off" >
 
         <div class="form-group">
           <div class="col-sm-12">
