--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                   </a>
 
                 </h3>
-                <small>Javascript, NodeJS, ReactJS, MongoDB, Material-UI</small>
+                <small>Javascript, NodeJS, ReactJS, MongoDB</small>
 
 
               </div>
