--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <i class="fab fa-github github-icon fa-2x"></i>
                   </a>
                 </h3>
-                <small>Javascript, ReactJS, MongoDBAtlas</small>
+                <small>Keycloak, MongoDB Atlas, Docker, Kubernetes, Linode</small>
 
 
               </div>
