--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
             <h2 class="mb-4 about-title" data-aos="fade-up"><strong>about me</strong></h2>
 
-            <p class="mb-0" data-aos="fade-up">I am currently a rising sophomore at Vanderbilt University studying computer science and applied mathematics, and was raised in the Chicago area but recently moved to Davidson, North Carolina.
-              <br><br>Most of my work revolves around building web applications, but I am still actively branching out my skills to explore the endless possibilities that come with a computer, some ramen, and the Internet.
+            <p class="mb-0" data-aos="fade-up">I am currently a sophomore at Vanderbilt University studying computer science with a minor in engineering management, and was raised in the Chicago area but recently moved to Davidson, North Carolina.
+              <br><br>I am currently deeply involved in the coding community here at Vanderbilt. I am a research assistant and teaching assistant, as well as run workshops for VandyHacks and lead a team of developers as an engineering manager for Change++. I also love competing in hackathons and building personal projects, where I spend hours exploring the endless possibilities that come with a computer, some ramen, and the Internet.
               <br><br>When I'm not behind a screen, you can find me swimming at the pool, practicing the viola or piano, or reading a book.
             </p>
           </div>
