--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="hero-text">
 
             <h1 class="text-white" data-aos="fade-up">Hi, I'm Kevin.</h1>
-            <h3 class="text-white" data-aos="fade-up">A Web Developer.</h3>
+            <h3 class="text-white" data-aos="fade-up">A Software Developer.</h3>
           </div>
         </div>
 
