--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-  <link rel="icon" type="image/png" href="images/logo.png" />
+  <meta
+      name="description"
+      content="Computer tapper."
+    />
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/logo.png" sizes="32x32" />
+  <link rel="icon" href="%PUBLIC_URL%/images/logo.png" sizes="192x192" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.png" />
+  
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/aos.css">
