--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
             <h2 class="mb-4 about-title" data-aos="fade-up"><strong>about me</strong></h2>
 
-            <p class="mb-0" data-aos="fade-up">I am currently a junior at Vanderbilt University studying computer science and applied mathematics with a minor in engineering management, and was raised in the Chicago area but recently moved to Davidson, North Carolina.
+            <p class="mb-0" data-aos="fade-up">I am currently a senior at Vanderbilt University studying computer science and applied mathematics with a minor in engineering management, and was raised in the Chicago area but moved to Davidson, North Carolina.
               <br><br>I am deeply involved in the coding community here at Vanderbilt, having been anything ranging from a research assistant and teaching assistant to Director of Content at VandyHacks and Technical Lead at ChangePlusPlus. I also love competing in hackathons and building personal projects, spending hours exploring the endless possibilities that come with a computer, some ramen, and the Internet.
-              <br><br>Last summer, I had the opportunity to work at Amazon on the Context and Memory Management Team for Alexa Shopping, where I worked with AWS Cloud Infrastructure and Data Tooling.
+              <br><br>I've had the opportunity to intern as a Software Engineer at Amazon (Context and Memory Management Team for Alexa Shopping), Roblox (Creator Collaboration Experience), and Apple (Open Source Program Office).
               <br><br>When I'm not behind a screen, you can find me swimming at the pool, practicing the viola or piano, or reading a book.
             </p>
           </div>
